added goroutine for cleaning up the phoneDataMap : stable: changing entire project structure
